Cambio título de pestaña genérico.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8"  />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
-    <title>Vite + React + TS</title>
+    <title>Tornavíapp</title>
   </head>
   <body>
     <div id="root"></div>
